--- a/content/4_diskussion.tex
+++ b/content/4_diskussion.tex
@@ -1,20 +1,32 @@
-\textit{TBD Discussed:}
-\begin{itemize}
-    \item Bezüglich Aufteilung der Probanden in sicher vs unsicher: Dies entspricht in etwa den Werten der Metanalyse von \citeA{VanIJzendoorn1988}, die 65\% sicher und 35\% unsicher gebundene Probanden gefunden hatte.
-    \item Umfrage: Abfrage von MP3Player und Tageszeitungen -> eigentlich wollte ich Medien nach Geräten und nicht Medientätigkeit => Problem: Heute kann mit dem Smartphone all die Tätigkeiten erledigt werden (inkl. Radio hören und TV schauen). Was ich eigentlich wollte, wären Geräte wie Smartphone und Tablet, die eine Barriere zwischen Kind und Eltern aufbauen herauskristalliesieren.
-    \item Digitale Mediennutzung bei den Eltern hängt mit dem sozioökonomischen Status zusammen (aus der Theorie) \cite{Livingstone2015}.
-    \item Soziodemografische Merkmale sind wichtige Faktoren der Eltern-Kind-Beziehung \cite{Kammerl2012}.
-\end{itemize}
-
-
 % ---------------------------------------
 \subsection{TBD: Beantwortung der Fragestellung} \label{sec:BeantwortungFragestellung}
+Auf die Beantwortung der Fragestellung, ob der Bindungsstil und das aktuelle Stressempfinden der Eltern auf das im Beisein der Kinder praktizierte Medienverhalten einen Zusammenhang bilden würde und ob dieses Verhalten einen Effekt auf das subjektive Wohlbefinden ausüben würde, soll in diesem Abschnitt eingegangen werden.
+
+Gemäss den Ergebnissen dieser Untersuchung konnte kein direkter Zusammenhang zwischen dem Bindungsstil der Eltern, unterteilt nach sicher und unsicher gebunden, auf das Medienverhalten im Beisein der Kinder festgestellt werden. Es kann auch kein Zusammenhang festgestellt werden, wenn die Mediennutzung anhand der Nutzung, ob das Kind während der Betreuung wach war oder geschlafen hat, unterteilt wird.  Zudem scheint der Faktor Stress keinen zusätzlichen Effekt auf die Mediennutzung auszuüben.
+
+Des Weiteren konnte kein Zusammenhang zwischen dem Medienverhalten der Eltern und dem subjektiv erlebten Wohlbefinden gefunden werden. Es kann davon ausgegangen werden, dass Medienverhalten und Wohlbefinden in diesem Fall keinen Zusammenhang bilden.
+
+Die Fragestellung setzt sich aus den vier Hypothesen zusammen, die einzelne Aspekte davon explizit beleuchten. Gemäss den Ergebnissen mussten alle vier Hypothesen abgelehnt werden und es gelten die Alternativhypothesen. Demzufolge geht gemäss Hypothese 1 ein sicherer Bindungsstil, verglichen mit einem unsicheren Bindungsstil, nicht mit einer geringeren Mediennutzung von Seiten der Eltern einher. Für Hypothese 2 scheint Stress kein Prädiktor für eine erhöhte Mediennutzung während der Betreuung der Kinder zu sein. Eine erhöhte Mediennutzung während der Betreuung, gemäss Hypothese 3, geht nicht mit einem geringeren subjektiven Wohlbefinden einher und ein sicherer Bindungsstil und ein tiefes Stressempfinden schlägt sich nicht in der geringeren Mediennutzung nieder.
+
+Aus diesen Hypothesen scheint sich ableiten zu lassen, dass die Bindung und der Stress der Eltern während der Betreuung von ihren Kindern keine Moderationsfunktion für die Mediennutzung  einnehmen. Zudem scheint sich die Mediennutzung nicht im subjektiven Wohlbefinden zu spiegeln. 
 
 % ---------------------------------------
 \subsection{TBD: Interpretation} \label{sec:Interpretation}
+\begin{itemize}
+    \item demographische daten der Stichprobe (Bildung, Geschlecht, etc.)
+    \item Mediennutzung interpretieren
+    \item Bezüglich Aufteilung der Probanden in sicher vs unsicher: Dies entspricht in etwa den Werten der Metanalyse von \citeA{VanIJzendoorn1988}, die 65\% sicher und 35\% unsicher gebundene Probanden gefunden hatte. Bindung AAS im Vergleich zu den Zahlen von Strange-Situation-Test setzen.
+    \item PSQ
+    \item SWB
+    \item Digitale Mediennutzung bei den Eltern hängt mit dem sozioökonomischen Status zusammen (aus der Theorie) \cite{Livingstone2015}. Soziodemografische Merkmale sind wichtige Faktoren der Eltern-Kind-Beziehung \cite{Kammerl2012}.
+\end{itemize}
 
 % ---------------------------------------
 \subsection{TBD: Methodenkritik} \label{sec:Methodenkritik}
+\begin{itemize}
+    \item Medienerfassung -> keine Unterteilung in Geräte möglich (Smartphone, etc). Umfrage: Abfrage von MP3Player und Tageszeitungen -> eigentlich wollte ich Medien nach Geräten und nicht Medientätigkeit => Problem: Heute kann mit dem Smartphone all die Tätigkeiten erledigt werden (inkl. Radio hören und TV schauen). Was ich eigentlich wollte, wären Geräte wie Smartphone und Tablet, die eine Barriere zwischen Kind und Eltern aufbauen herauskristalliesieren.
+\end{itemize}
 
 % ---------------------------------------
 \subsection{TBD: Ausblick} \label{sec:Ausblick}
+\gls{swb}
