--- a/content/Anhang/Umfragebogen.tex
+++ b/content/Anhang/Umfragebogen.tex
@@ -97,8 +97,8 @@ Welche der folgenden Geräte und Medien haben Sie während der letzten Betreuung
   14 & Tablet &  &  &  &  \\
   15 & Radio / Stereoanlage / CD-Player &  &  &  &  \\
   16 & Printmedien (Buch / Zeitung / Heft / Comic) &  &  &  &  \\
-  17 & Foto- und/oder Videocamera &  &  &  &  \\
-  18 & Spielkonsole &  &  &  &  \\
+  17 & Foto- und / oder Videokamera &  &  &  &  \\
+  18 & Spielekonsole &  &  &  &  \\
   19 & MP3 Player &  &  &  &  \\
   
 \end{longtable}
@@ -129,7 +129,7 @@ Welche Medientätigkeiten in Minuten haben Sie während der letzten Betreuung im
   20 & Telefonieren &  &  \\
   21 & Textnachrichten lesen und schreiben (SMS, Whatsapp, etc.)  &  &  \\
   22 & Emails lesen und bearbeiten &  &  \\
-  23 & Lesen / anschauen von Printmedien (Bilder-Büche &  &  \\
+  23 & Lesen / anschauen von Printmedien (Bilder-Bücher) &  &  \\
   24 & Internet nutzen (surfen, Informationen suchen, etc.) &  &  \\
   25 & Musik hören &  &  \\
   26 & Fernsehen und Videos schauen (Sender, Netflix, DVD, etc.) &  &  \\
@@ -168,8 +168,8 @@ Wieviele der folgend aufgelisteten Geräte und Medien sind in Ihrem Haushalt vor
   34 & Tablet &  \\
   35 & Radio / Stereoanlage / CD-Player &  \\
   36 & Abo Tageszeitung / Zeitschrift &  \\
-  37 & Foto- Videocamera &  \\
-  38 & Spielkonsole &  \\
+  37 & Foto- Videokamera &  \\
+  38 & Spielekonsole &  \\
   39 & MP3 Player &  \\
 \end{longtable}
 
@@ -201,8 +201,8 @@ Auf welche drei Medium könnten Sie während der Betreuung nicht verzichten? Bit
   43 & Tablet &\\
   44 & Radio / Stereoanlage / CD-Player &\\
   45 & Abo Tageszeitung / Zeitschrift &\\
-  46 & Foto- Videocamera &\\
-  47 & Spielkonsole &\\
+  46 & Foto- Videokamera &\\
+  47 & Spielekonsole &\\
   48 & MP3 layer &\\
 \end{longtable}
 
