--- a/content/glossar.tex
+++ b/content/glossar.tex
@@ -1,2 +1,4 @@
-\newacronym{swb}{SWB}{subjektives Wohlbefinden}
-\newacronym{svm}{SVM}{support vector machine}
+\newacronym{aas}{AAS}{Adult Attachment Scale}
+\newacronym{psq}{PSQ}{Perseived Stress Questionnaire}
+\newacronym{shs}{SHS}{Subjective Happiness Scale}
+\newacronym{swb}{SWB}{Subjektives Wohlbefinden}
