--- a/content/2_methode.tex
+++ b/content/2_methode.tex
@@ -1,12 +1,12 @@
 % ---------------------------------------
 \subsection{Versuchssituation}\label{sec:Versuchssituation}
-Die Erstellung dieser Arbeit erfolgte im Frühlingssemester 2018 im Rahmen einer Masterarbeit an der Zürcher Hochschule für Angewandte Wissenschaften (ZHAW) im Studiengang Angewandte Psychologie in der Vertiefung klinische Psychologie. Die Wahl des Themas und die Erstellung der Disposition erfolgte im Herbstsemester 2017. In dieser wurde anhand aktueller theoretischer Ansätze und der bisherigen Forschung (siehe auch Kap. \titleref{sec:Hintergrund}) das Vorgehen und das Design vordefiniert und zusammen mit dem betreuenden Dozenten abgesprochen. 
+Die Erstellung dieser Arbeit erfolgte im Frühlingssemester 2018 im Rahmen einer Masterarbeit an der Zürcher Hochschule für Angewandte Wissenschaften (ZHAW) im Studiengang Angewandte Psychologie in der Vertiefungsrichtung klinische Psychologie. Die Wahl des Themas und die Erstellung der Disposition erfolgte im Herbstsemester 2017. In dieser wurde anhand aktueller theoretischer Ansätze und der bisherigen Forschung (siehe auch Kap. \titleref{sec:Hintergrund}) das Vorgehen und das Design vordefiniert und zusammen mit dem betreuenden Dozenten abgesprochen. 
 
 In einem ersten Schritt erfolgte die Erstellung eines standardisierter Fragebogens. Dieser basierte auf der theoretischen Vorarbeit und beinhaltete die für die Beantwortung der Fragestellung notwendigen Konstrukte \textit{Bindung}, \textit{Stress}, \textit{Medienverhalten}, \textit{subjektives Wohlbefinden} sowie der Erfassung soziodemografischer Daten. Für die Erstellung des Fragebogens wurden soweit als möglich bereits normierte und validierte Instrumente oder Teile aus bereits existierender Umfragen verwendet. Die Umfrage erfolgte elektronisch über das Internet und setzte sich aus einer kurzen Erläuterung der Studie, sowie entsprechende Anweisungen zur Beantwortung der Fragen zusammen. 
 
-Der Fragebogen wurde mittels der von der ZHAW zur Verfügung gestellten Umfragesoftware \textit{Enterprise Feedback Suite} der Firma \citeA{Questback2018}. Die grafische Erscheinung richtete sich an die vorgegebenen Fragebogentypen und deren Antwortoptionen (ein Auszug des Fragebogens ist in angepasster Form im Anhang \ref{app:Fragebogen} zu finden). Der Aufbau der Umfrage gliederte sich grob in eine kurze Einführungssektion, gefolgt von der Erfassung der demografischen Daten und dem Hauptteil, der die einzelnen Konstrukte erfasste und dem Ende der Umfrage. In der Einführung wurde die Anonymitätserklärung eingebunden, einen Hinweis auf die mögliche Teilnahme an einem  Wettbewerb gemacht und über die Option für Psychologiestudierende der ZHAW, sich Versuchspersonenstunden anrechnen zu lassen, informiert. Anschliessend erfolgte die Erfassung der demografischen Daten. Im Hauptteil wurden die einzelnen Konstrukte erhoben, beginnend mit dem Mediennutzungs-Fragebogen, gefolgt vom Bindungsfragebogen, dem Stressfragebogen und dem Fragebogen für die Einschätzung des subjektiven Wohlbefindens. Am Ende der Befragung konnten sich die Teilnehmer für die Teilnahme am Wettbewerb oder dem Erhalt für Versuchspersonenstunden entscheiden. Versuchspersonenstunden konnten sich nur Studierende der ZHAW in Psychologie anrechnen lassen. Ebenso am Schluss wurden die Teilnehmer gebeten, die Seriosität ihrer Antworten anzugeben (seriös beantwortet oder nicht). 
+Der Fragebogen wurde mittels der von der ZHAW zur Verfügung gestellten Umfragesoftware \textit{Enterprise Feedback Suite} der Firma \citeA{Questback2018} erstellt. Die grafische Umsetzung richtete sich an die von der Software vorgegebenen Fragebogentypen und deren Antwortoptionen (ein Auszug des Fragebogens ist in angepasster Form im Anhang \ref{app:Fragebogen} zu finden). Der Aufbau der Umfrage gliedert sich grob in eine kurze Einführungssektion, gefolgt von der Erfassung der demografischen Daten und dem Hauptteil, der die einzelnen Konstrukte erfasste und dem Ende der Umfrage. In der Einführung wurde die Anonymitätserklärung eingebunden, einen Hinweis auf die mögliche Teilnahme an einem  Wettbewerb gemacht und über die Option für Psychologiestudierende der ZHAW, sich Versuchspersonenstunden anrechnen zu lassen, informiert. Anschliessend erfolgte die Erfassung der demografischen Daten. Im Hauptteil wurden die einzelnen Konstrukte erhoben, beginnend mit dem Mediennutzungs-Fragebogen, gefolgt vom Bindungsfragebogen, dem Stressfragebogen und dem Fragebogen für die Einschätzung des subjektiven Wohlbefindens. Am Ende der Befragung konnten sich die Teilnehmer für die Teilnahme am Wettbewerb oder dem Erhalt für Versuchspersonenstunden entscheiden. Versuchspersonenstunden konnten sich nur Studierende der ZHAW in Psychologie anrechnen lassen. Ebenso am Schluss wurden die Teilnehmer gebeten, die Seriosität ihrer Antworten anzugeben (Umfrage seriös beantwortet oder nicht). 
 
-Die Testung des Fragebogens erfolgte mittels Pretest bezüglich seiner Funktionalität. Die Software erlaubte eine erste elektronische Testung auf Korrektheit. Dabei wurde geprüft, ob bei der Beantwortung alle Fragen durchlaufen wurden. In einem weiteren Test wurden fünf willkürlich ausgewählte Testpersonen aus dem Bekanntenkreis des Autoren als Testpersonen rekrutiert, welche den Fragebogen durchspielten. Diese wurden angehalten, die Fragen und deren Anweisungen auf Verständlichkeit zu überprüfen. Zudem sollten sie prüfen, ob die Beantwortung sinnvoll möglich war. Eine weitere Prüfung wurde durch den betreuenden Dozenten vorgenommen. 
+Die Testung des Fragebogens erfolgte mittels Pretest bezüglich seiner Funktionalität. Die Software erlaubte eine erste elektronische Testung auf Korrektheit. Dabei wurde geprüft, ob bei der Beantwortung alle Fragen durchlaufen wurden. In einem weiteren Test wurden fünf willkürlich ausgewählte Testpersonen aus dem Bekanntenkreis des Autoren als Testpersonen rekrutiert, welche den Fragebogen durchspielten. Diese wurden angehalten, die Fragen und deren Anweisungen auf Verständlichkeit zu überprüfen. Zudem sollten sie prüfen, ob die Beantwortung sinnvoll möglich war. Eine weitere detaillierte Prüfung wurde durch den betreuenden Dozenten vorgenommen. 
 
 Nach dem Abschluss der Testphase wurden alle bis dahin erfassten Daten der Tester gelöscht und die gesamte Umfrage frisch initialisiert. Die Umfrage wurde aktiviert und für die Teilnehmer verfügbar gemacht. In diesem Zeitraum erfolgte die Rekrutierung der Stichprobe (siehe dazu \titleref{sec:Datenerhebung} auf Seite \pageref{sec:Datenerhebung}) und die Vorbereitung für die Auswertung der Daten. 
 
