sec:Methode - für Lektorat überarbeitet

--- a/content/1_theorie.tex
+++ b/content/1_theorie.tex
@@ -96,7 +96,7 @@ Bezüglich der täglich ausgesetzten Informationsflut durch die Medien spricht \
 
 % ---------------------------------------
 \subsubsection{Subjektives Wohlbefinden}\label{sec:Swb}
-Subjektives Wohlbefinden (SWB) wird in der psychologischen Forschung oft mit \textit{Glück} gleichgesetzt \cite{Eid2014}. Es lassen sich zwei generelle Perspektiven unterscheiden: Einerseits das subjektive Wohlbefinden und andererseits das eudämonische Wohlbefinden. Das erstere bezeichnet Personen als glücklich, die eine häufige Lebenszufriedenheit aufweisen sowie häufig positive und selten negative Gefühle erleben. Im Gegenzug zu diesem hedonistischen Wohlbefinden, zeichnet sich die Forschung des eudämonischen, oder auch psychologischen Wohlbefinden durch ein gelingendes Leben und menschliche Stärke aus. In beiden Richtungen wurden unterschiedliche Theorien und Bedingungen entwickelt, dabei sind interindividuelle Unterschiede beider Richtungen nicht unabhängig voneinander und hängen stark zusammen \cite{Eid2014}.
+Subjektives Wohlbefinden (\acrshort{swb}) wird in der psychologischen Forschung oft mit \textit{Glück} gleichgesetzt \cite{Eid2014}. Es lassen sich zwei generelle Perspektiven unterscheiden: Einerseits das subjektive Wohlbefinden und andererseits das eudämonische Wohlbefinden. Das erstere bezeichnet Personen als glücklich, die eine häufige Lebenszufriedenheit aufweisen sowie häufig positive und selten negative Gefühle erleben. Im Gegenzug zu diesem hedonistischen Wohlbefinden, zeichnet sich die Forschung des eudämonischen, oder auch psychologischen Wohlbefinden durch ein gelingendes Leben und menschliche Stärke aus. In beiden Richtungen wurden unterschiedliche Theorien und Bedingungen entwickelt, dabei sind interindividuelle Unterschiede beider Richtungen nicht unabhängig voneinander und hängen stark zusammen \cite{Eid2014}.
 
 Bereits \citeA{Aristoteles1952} (384-323 v.Chr.) bezeichnete Glück für das höchste Gut, das wir um seiner selbst Willen anstreben. Obschon die Menschheit Glück seit jeher anstrebt, wurde dieses Thema von der Psychologie lange vernachlässigt, zusammen mit Freude, Heiterkeit und Wohlbefinden \cite{Tugade2014, Gruber2014}. Eine Ursache dafür beschreibt \citeA{Maddux2005} in der sogenannten \textit{Krankheitsideologie}, die vor allem in der Psychiatrie und der klinischen Psychologie anzutreffen sei. Nach wie vor ist von \enquote{Symptom} die Rede, von \enquote{Störung, Pathologie, Krankheit, Diagnose, Behandlung, etc.} \cite[S.~14]{Maddux2005}. Im DSM, das erstmals im Jahre 1952 von der Amerikanischen Psychologenvereinigung herausgegeben, wurden auf 86 Seiten 106 psychische Störungen beschrieben. Fünfzig Jahre später (1994) waren es 297 Störungen \cite{Bucher2009}.
 
