--- a/content/2_methode.tex
+++ b/content/2_methode.tex
@@ -16,7 +16,7 @@ Die gesamte Masterarbeit dauerte von der Erstellung der Disposition im Herbstsem
 
 % ---------------------------------------
 \subsection{Design \& Operationalisiserung} \label{sec:Design}
-Bei der vorliegenden Studie handelt es sich um eine empirische Querschnitts-Studie mit quantitativem Charakter. Aus ökonomischer Sicht und bezüglich einem hohen Mass an Standardisierung \cite[S.~86ff]{sedlmeier2008} wurde eine schriftliche Befragung via Internet-Fragebogen durchgeführt. Dadurch konnten die Befragten leichter kontaktiert und ein höherer Grad an Anonymität erreicht werden. Dazu wurden die für die Hypothesen relevanten Parameter empirisch erhoben und mittels deskriptiver Statistik ausgewertet. Der Fragebogen wurde in deutscher Sprache verfasst, weshalb die Rekrutierung ausschliesslich in der deutschsprachigen Schweiz erfolgte. Eine Übersetzung der Umfrage in weiter Sprachen hätte den Umfang dieser Arbeit gesprengt, da die einzelnen Fragebögen durch eine der wissenschaft genügenden Hin- und Rückübersetzung durch Personen aus den beiden Muttersprachen zu erfolgen gehabt hätte \cite{Pfetsch2016}.
+Bei der vorliegenden Studie handelt es sich um eine empirische Querschnitts-Studie mit quantitativem Charakter. Aus ökonomischer Sicht und bezüglich einem hohen Mass an Standardisierung wurde eine schriftliche Befragung via Internet-Fragebogen durchgeführt \cite[S.~86ff]{sedlmeier2008}. Dadurch konnten die Befragten leichter kontaktiert und ein höherer Grad an Anonymität erreicht werden. Dazu wurden die für die Hypothesen relevanten Parameter empirisch erhoben und mittels deskriptiver Statistik ausgewertet. Der Fragebogen wurde in deutscher Sprache verfasst, weshalb die Rekrutierung ausschliesslich in der deutschsprachigen Schweiz erfolgte. Eine Übersetzung der Umfrage in weiter Sprachen hätte den Umfang dieser Arbeit gesprengt, da die einzelnen Fragebögen durch eine der wissenschaft genügenden Hin- und Rückübersetzung durch Personen aus allen involvierten Muttersprachen zu erfolgen gehabt hätte \cite{Pfetsch2016}.
 
 Bezüglich Minimierung von Risiken für die Versuchspersonen wurden keine spezifischen Vorkehrungen getroffen, da von einer Unbedenklichkeit des Fragebogens bezüglich ethischen Richtlinien ausgegangen wurde.
 
@@ -32,9 +32,9 @@ Für die Beantwortung des Zusammenhangs zwischen Medienverhalten und subjektiven
 Bei den soziodemografischen Daten wurden folgende Parameter erfasst: Geschlecht, Jahrgang (Alter), Alter des Kindes in Monaten, Geschlecht des Kindes, brutto Familieneinkommen gemäss \citeA{NZZ2014}, Bildungsabschluss gemäss \citeA{Bfsnd}, Anzahl Personen im gleichen Haushalt, Lebensform, Anzahl Tage, an denen das Kind fremdbetreut ist und der durchschnittliche Betreuungsaufwand pro Woche.
 
 \subsubsection{Medien und Mediennutzung}\label{sec:MedienMediennutzung}
-Die Fragebogenitems für die Erfassung der Medien und der Mediennutzung wurden basierend auf den Vorlagen der Studien von \citeA{Feierabend2017, Blikk2017, Waller2016, Suter2015, Feierabend2015, Kabali2015} neu zusammengestellt. Dabei stand die Mediennutzung während der Betreuung der Kinder in Minuten und das dazu verwendeten Medium im Fokus. Zudem erfolgte ein Spezifizierung der Einschätzung der Mediennutzung hinsichtlich des betreuten Kindes, ob dieses wach war oder geschlafen hat. Des Weiteren wurde erfragt, ob das Medium für die Nutzung privat oder geschäftlich genutzt wurde. 
+Die Fragebogenitems für die Erfassung der Medien und der Mediennutzung wurden basierend auf den Vorlagen der Studien von \citeA{Feierabend2017, Blikk2017, Waller2016, Suter2015, Feierabend2015, Kabali2015} neu zusammengestellt. Dabei stand die Mediennutzung während der Betreuung der Kinder in Minuten und das dazu verwendeten Medium im Fokus. Zudem erfolgte ein Spezifizierung der Einschätzung der Mediennutzung hinsichtlich des betreuten Kindes, ob dieses während der Betreuung wach war oder geschlafen hat. Des Weiteren wurde erfragt, ob das Medium für die Nutzung privat oder geschäftlich genutzt wurde. 
 
-Die Einschätzung der absoluten Mediennutzung der Eltern erfolgte anhand der letzten Betreuung ihrer Kinder. Es wurde davon ausgegangen, dass die Nutzung für die Probanden am einfachsten aus der Erinnerung abrufbar sei. Eine Unterteilung nach Wochentag oder Wochenende wurde als wenig zielführend erachtet. Für die Beantwortung der Fragestellung hätte bereits die reine Mediennutzung gereicht. Es wurde jedoch als hilfreich erachtet, zusätzliche Parameter zur reinen Dauer zu erheben, um gegebenenfalls die Fragestellung detaillierter beantworten zu können. Erfasst wurden neben dem benutzen Medium und der aufgewendeten Zeit, die im Haushalt vorhanden Geräte und auf welches der benutzen Geräte die Eltern während der Betreuung am wenigsten verzichten konnten. 
+Die Einschätzung der absoluten Mediennutzung der Eltern erfolgte anhand der letzten Betreuung ihrer Kinder. Es wurde davon ausgegangen, dass die Nutzung für die Probanden am einfachsten aus der Erinnerung abrufbar sei. Eine Unterteilung der Nutzung nach Wochentag oder Wochenende wurde als wenig zielführend erachtet. Für die Beantwortung der Fragestellung hätte bereits die reine Mediennutzung gereicht. Es wurde jedoch als hilfreich erachtet, zusätzliche Parameter zur reinen Nutzung zu erheben, um gegebenenfalls die Fragestellung detaillierter beantworten zu können. Erfasst wurden neben der Mediennutzung und der aufgewendeten Zeit, die dazu benutzten Medien, die im Haushalt vorhanden Geräte und auf welches der benutzen Geräte die Eltern während der Betreuung am wenigsten verzichten konnten. Zu den erfassten Medien gehörten: (1) Smartphone, (2) TV, (3) Desktop / Laptop Computer, (4) Tablet, (5) Radio / Stereoanlage / CD-Player, (6) Printmedien (Buch, Zeitung, Heft, Comic), (7) Foto- und / oder Videokamera, (8) Spielekonsole und (9) MP3 Player.
 
 Die Operationalisiserung erfolgte anhand der Summenbildung der Mediennutzung in Minuten, während denen das Kind betreut wurde. Es wurden insgesamt 11 Tätigkeiten abgefragt: (1) Telefonieren, (2) Textnachrichten lesen und schreiben (SMS, Whatsapp, etc.), (3) Emails lesen und bearbeiten, (4) Lesen / anschauen von Printmedien (Bilder-Bücher), (5) Internet nutzen (surfen, Informationen suchen, etc.), (6) Musik hören, (7) Fernsehen und Videos schauen (Sender, Netflix, DVD, etc.), (8) Radio hören, (9) Fotos oder Videos machen, (10) Video-Games spielen (Handy, Computer, Konsole, etc.) und (11) Hörspiele oder Hörbücher hören. 
 
@@ -50,6 +50,8 @@ Die Operationalisiserung erfolgte anhand der Summenbildung der Mediennutzung in 
 \end{equation}
 
 Die Gesamtsumme der Mediennutzung (MN) $MN_{Total}$ (Formel \ref{eq:MedienTotal}) setzt sich aus den Teilsummen der Tätigkeiten zusammen, an denen das Kind wach war $MN_{Wach}$ (Formel \ref{eq:MedienWach}) oder geschlafen hat $MN_{Geschlafen}$ (Formel \ref{eq:MedienSchlafend}).
+
+
 
 \subsubsection{Bindung: Adult Attachment Scale (AAS)}\label{sec:AAS}
 Für die Erfassung des Bindungsstils (\textit{engl. attachment}) wurde der von \citeA{Schmidt2004} ins Deutsche übersetzte Fragebogen \textit{Adult Attachment Scale (\acrshort{aas})} von \citeA{Collins1990} verwendet. Dieser erfasst die Bindung über die Selbst\-beschreibungs\-masse, in Ahnlehnung an die 1-Item-Selbst\-beschreibungs\-masse von \citeA{Hazan1987}. Dabei gilt dieser gemäss \citeA{Fraley2000} als einer der weit verbreiteten Selbst\-er\-fassungs\-bögen im englisch\-sprachigen Raum.
