App: Tabelle Elternberatungsstellen

--- a/content/2_methode.tex
+++ b/content/2_methode.tex
@@ -169,7 +169,7 @@ Die Rekrutierung erfolgte im Sinne einer Gelegenheitsstichprobe, da das Ziel die
 
 Für den Versand des Infomailings und des Flyers wurden unterschiedliche Kanäle verwendet: Einerseits wurden diese per Post für die jeweilige Auslage und den Aushang versendet, andererseits erfolgte der Versand elektronisch über Mail, Facebook-Posting und Text-Nachrichten. Zudem wurde der Flyer auf unterschiedlichen einschlägigen Webseiten publiziert. Um den Medienbruch möglichst gering zu halten, wurde wann immer möglich versucht, den Link für die Umfrage elektronisch zugänglich zu machen. 
 
-Die Rekrutierung fand an folgenden Orten und Institutionen statt (für eine detaillierte Übersicht, siehe Anhang \ref{app:Rekrutierung}): Direkt an der ZHAW, über die Elternberatungsstellen der deutschsprachigen Schweiz \cite{Sfmvb2018}, über Spitäler mit Wochenbett und Kinderärzte, über die deutschsprachigen Familienzentren \cite{NetzwerkBildung2018}, über die Anschrift aller deutschsprachiger Niederlassungen der \citeA{Elternbildung2018} und über das private Umfeld des Autors, mit der Bitte, die Umfrage im eigenen Umkreis weiter zu verteilen. Zudem wurde die Umfrage auf der Internetplattform der Elternzeitschrift \enquote{Fritz \&  Fränzi}, dem Marktplatz des Elternmagazins \enquote{Wir Eltern} und dem Forum der Internetplattform \enquote{Swissmom} publiziert.
+Die Rekrutierung fand an folgenden Orten und Institutionen statt (für eine detaillierte Übersicht, siehe Auflistung in Anhang \ref{app:Rekrutierung}): Direkt an der ZHAW, über die Elternberatungsstellen der deutschsprachigen Schweiz \cite{Sfmvb2018}, über Spitäler mit Wochenbett und Kinderärzte, über die deutschsprachigen Familienzentren \cite{NetzwerkBildung2018}, über die Anschrift aller deutschsprachiger Niederlassungen der \citeA{Elternbildung2018} und über das private Umfeld des Autors, mit der Bitte, die Umfrage im eigenen Umkreis weiter zu verteilen. Zudem wurde die Umfrage auf der Internetplattform der Elternzeitschrift \enquote{Fritz \&  Fränzi}, dem Marktplatz des Elternmagazins \enquote{Wir Eltern} und dem Forum der Internetplattform \enquote{Swissmom} publiziert.
 
 Um für die Teilnahme an der Umfrage möglichst viele Eltern zu gewinnen, wurde mittels Wettbewerb und Versuchspersonenstunden Anreize geschaffen. Beim Wettbewerb handelte es sich um Warengutscheine bei einem renomierten Onlineshop für Babybedarf von 10 x CHF 50.- (www.baby-rose.ch). Dabei wurde am Ende des Fragebogens die Möglichkeit geboten, am Wettbewerb teilzunehmen und die eigene Emailadresse für die Benachrichtigung im Fall eines Gewinns zu hinterlegen. Am Schluss der Rekrutierungsphase wurden die Gewinner per Zufall gezogen. Dazu wurden alle Wettberwerbsteilnehmen in eine separate Liste kopiert und nummeriert. Anschlissend wurde mittels minimalem Swift-Skript \cite{Swift2017} zehn Teilnehmer randomiesiert ausgewählt (Code siehe Anhang \ref{app:Wettbewerb}). Diese wurden mittels Mail über ihren Gewinn informiert. Neben dem Wettbewerb konnten sich Studierende der ZHAW in Angewandter Psychologie 0.5 Versuchspersonenstunden anrechenen lassen, wenn sie die Umfrage durchführten. Die Validierung über die Berechtigung der Versuchspersonenstunden erfolgte innerhalb der ZHAW im Departement Psychologie (mail: diana.graf@zhaw.ch). 
 
