--- a/header.tex
+++ b/header.tex
@@ -35,6 +35,7 @@
 \usepackage[autostyle=true,german=quotes]{csquotes}
 \usepackage{prettyref}
 \usepackage{titleref}
+\usepackage{nameref}
 %%% Für Abschnitte %%%
 \newrefformat{sec}{siehe Abschnitt~\ref{#1} \enquote{\titleref{#1}} \ auf Seite \pageref{#1}}
 %%% Für Abbildungen %%%
