app: tabelle Elternberatungsstellen small change

--- a/content/Anhang/Rekrutierung.tex
+++ b/content/Anhang/Rekrutierung.tex
@@ -142,23 +142,23 @@ Alle angeschriebenen Institutionen werden in folgenden Tabellen aufgeführt:
 
 
 %Table
-\begin{longtable}[htbp]{|p{0.2em} p{0.2em} p{16em} | c | c |} 
+\begin{longtable}[htbp]{|p{0.2em} p{20em} | c | c |} 
   \caption{Stichprobengewinnung} \label{table:AppRekrutierung}\\
   
   \rowcolor{lightgray}
-  \multicolumn{5}{|l|}{Elternberatungsstellen via Fachverband Mütter und Väterberatung \cite{Sfmvb2018a}}\\
+  \multicolumn{4}{|l|}{Elternberatungsstellen via Fachverband Mütter und Väterberatung \cite{Sfmvb2018a}}\\
   \hline
-  \multicolumn{3}{|l|}{Insititution und Adresse} & Anfrage & Verteilung\\
-  & & & (Mail / Tel. / Priv.) & (HP / FB / Flyer)\\
+  \multicolumn{2}{|l|}{Insititution und Adresse} & Anfrage & Verteilung\\
+  & & (Mail / Tel. / Priv.) & (HP / FB / Flyer)\\
   \hline
   \endfirsthead
  
   \hline
   \rowcolor{lightgray}
-  \multicolumn{5}{|c|}{ Fortsetzung Elternberatungsstellen}\\
+  \multicolumn{4}{|c|}{ Fortsetzung Elternberatungsstellen}\\
   \hline
-  \multicolumn{3}{|l|}{Insititution und Adresse} & Anfrage & Verteilung\\
-  & & & (Mail / Tel. / Priv.) & (HP / FB / Flyer)\\
+  \multicolumn{2}{|l|}{Insititution und Adresse} & Anfrage & Verteilung\\
+  & & (Mail / Tel. / Priv.) & (HP / FB / Flyer)\\
   \hline
   \endhead
  
@@ -169,7 +169,7 @@ Alle angeschriebenen Institutionen werden in folgenden Tabellen aufgeführt:
   \endlastfoot
   
   
-  & \multicolumn{2}{l|}{Sektion Aargau (info@mvb-aargau.ch)} & Mail & HP, FB\\
-  && Bezirk Rheinfelden (info@muebe.ch) & Mail & k.R.\\
+  \multicolumn{2}{|l|}{Sektion Aargau (info@mvb-aargau.ch)} & Mail & HP, FB\\
+  & Bezirk Rheinfelden (info@muebe.ch) & Mail & k.R.\\
   
 \end{longtable}
