sec:Ergebnisse: überarbeitet für lektorat deskriptiv

--- a/content/Anhang/TabellenAAS.tex
+++ b/content/Anhang/TabellenAAS.tex
@@ -1,4 +1,4 @@
-Die folgenden Tabellen stellen die Skalenwerte der Adult Attachement Scale (AAS) dar. Einmal mit dem Skalenwertebereich von 1 bis 5 (\ref{table:AppAASDeskriptiv}) und einmal mit dem transformierten Wertebereich 0 bis 100 (\ref{table:AppAASDeskriptivTrans}).
+Die folgende Tabellen stellt die Skalenwerte der Adult Attachement Scale (AAS) dar.
 
 %Table
 \begin{table}[ht]
@@ -15,21 +15,4 @@ Die folgenden Tabellen stellen die Skalenwerte der Adult Attachement Scale (AAS)
 \end{tabular}
 \caption{Skalenwerte der Adult Attachment Scale - AAS}
 \label{table:AppAASDeskriptiv}
-\end{table}
-
-%Table
-\begin{table}[ht]
-\begin{tabular}{m{7em} m{3em}  m{3em}  m{5em} m{3em}} 
-  \hline
-  & $M$ & $SD$ & Min - Max & Schiefe\\
-  \hline
-  $AAS_{\textit{\textnormal{NäheTrans}}}$ & 78.46 & 15.98 & 25 - 100 & -.59\\
-  $AAS_{VertrauenTrans}$ & 80.18 & 16.98 & 16.67 - 100 & -1.17\\
-  $AAS_{AngstTrans}$ & 20.28 & 17.43 & -5 - 75 & .91 \\
-  \hline
-  \multicolumn{5}{l}{\textit{Anmerkung. $N$=217, Wertebereich Skala 0 bis 100.}}\\
-  &&&&\\
-\end{tabular}
-\caption{Transformierte Skalenwerte der Adult Attachment Scale - AAS}
-\label{table:AppAASDeskriptivTrans}
 \end{table}
